--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
